hexo-triangles/source/css/style.css
body {
  background: url(../img/triangleSVG.svg);
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  padding: 0 5vw;
}

.nav-default {
	background: white;

}

h1, h2, h3, h4, h5{
	color:#4A4E69 !important;
	font-weight: 300;
	font-family: 'Open Sans', sans-serif;
}

p {
	color: #4A4E69;
	font-weight: 300;
	font-family: 'Open Sans', sans-serif;
}

.main-container {
	padding-top:50px;
}

.about-me h1 {
	font-size:24px;
}

.about-me h2 {
	font-size:20px;
}

.about-me h3 {
	font-size:18px;
}

.bottom-cta {
	background: white;
	position: fixed;
	width: 100%;
	padding: 15px;
	box-shadow: 0 0 2px 3px lightgrey;
	left: 0;
	z-index: 10000;
	bottom: 0;
}

.cta-icon {
	font-size:2em;
	margin:5px;
}


.cta-icon:hover,
.cta-icon:focus {
	text-decoration: none;
}

.profile-pic {
	box-shadow: 0px 4px 6px 2px lightgrey;
  border-radius: 50%;
  max-width: 70%;
}

/*.m-t-1 {
	margin-top:1em;
}

.p-t-1 {
	padding-top:1em;
}*/


/*.about-me {
	margin-top:25px;
}*/

.navbar-default {
	background-color: #C9ADA7;
	background: none;
	border: none;
	border-radius:0;
}

/*.row-footer {
	background-color: lightgrey;
	-webkit-clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
	clip-path: polygon(0 0%, 100% 4%, 100% 100%, 0% 100%);
	padding: 65px 10px;
}*/

.work-item-row {
	/*padding: 10% 0;*/
	margin-bottom:100px;
}

.row-tools {
  padding: 50px 0;
}

/*.linkedin-btn {
	width:140px;
	box-shadow: 0px 2px 5px 1px lightgrey;
	padding: 12px;
	border-radius: 5px;
}*/

.btn-launch {
	width:100%;
	max-width:200px;
	background-color: #549657;
	color:white;
	box-shadow: 0px 2px 5px 1px darkgrey;
}

.btn-launch:hover,
.btn-launch:focus {
	color: white;
	background: #3d7140;
}

.about-side {
	position:fixed;
}

.project {
	background: white;
	border-radius:5px;
	box-shadow: 0 0 2px 2px lightgrey;
	padding: 30px;
}

.vertical-center {
  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
  min-height: 100vh; /* These two lines are counted as one :-)       */

  display: flex;
  align-items: center;
}

.hobby-icon{
	margin-top: 5px;
}

.hobby-iconX2{
	margin-top: -15px; 
	margin-left: 10px;
}

#page-nav{
	letter-spacing: 5px;
	text-align: center;
}

.sidebar-list{
	list-style-type: none;
}

#sidebar-list{
	list-style-type: none;
}

